# runmon

./: LICENSE  README.md  README.zh-CN.md
agent/: README.md  README.zh-CN.md  pyproject.toml
agent/src/runmon/: __main__.py  attach.py  cli.py  config.py  crypto.py  demo_train.py  events.py  gpuwait.py  notify.py  progress.py  relay_client.py  runner.py  sampler.py  store.py  terminal.py
agent/tests/: test_cli.py  test_config.py  test_crypto.py  test_daemon_e2e.py  test_e2e.py  test_events.py  test_gpuwait.py  test_notify.py  test_package.py  test_progress.py  test_relay_client.py  test_runner.py  test_sampler.py  test_store.py  test_terminal_e2e.py
app/: README.md  README.zh-CN.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/dev/runmon/runmon_app/: MainActivity.kt
app/lib/: main.dart  notifications.dart  settings.dart  state.dart  swipe_delete.dart  terminal_gate.dart  ui.dart  update.dart
app/lib/pages/: events_page.dart  gpu_watch_sheet.dart  pair_page.dart  run_detail_page.dart  runs_page.dart  scan_page.dart  settings_page.dart  terminal_page.dart
app/macos/Runner/: Info.plist
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: crypto_test.dart  widget_test.dart
docs/plans/: 2026-07-16-m1-agent.md  2026-07-16-m2-relay-and-app.md
docs/specs/: 2026-07-16-runmon-design.md
examples/: train_example.py
relay/: README.md  README.zh-CN.md  pyproject.toml
relay/deploy/: nginx-example.conf  runmon-relay.service
relay/src/runmon_relay/: __main__.py  app.py  storage.py
relay/tests/: test_relay.py
scripts/: build-apk.sh  dev-stack.sh
site/: index.html  tokens.css
