[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runmon-relay"
version = "1.0.1"
description = "Self-hosted E2EE relay for RunMon: stores and forwards ciphertext between agents and phone apps."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[project.urls]
Homepage = "https://runmon.linxiexie.com"
Source = "https://github.com/murphy977/runmon"
Issues = "https://github.com/murphy977/runmon/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/runmon_relay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
